# agentic-redpanda

./: .gitignore  README.md  demo_simple.py  pyproject.toml  requirements.txt  run_enhanced_example.py  run_example.py  setup.py  test_redpanda_connection.py
agentic_redpanda/: __init__.py  cli.py
agentic_redpanda/core/: __init__.py  agent.py  conversation_manager.py  enhanced_agent.py  error_handler.py  message_broker.py  message_router.py  subscription_manager.py  topic_manager.py  topic_validator.py
agentic_redpanda/providers/: __init__.py  base.py  claude_provider.py  google_provider.py  ollama_provider.py  openai_provider.py
agentic_redpanda/schemas/: __init__.py  message.py
agentic_redpanda/utils/: __init__.py  config.py  logging.py
config/: akhq.yml  example.yaml  test.yaml
examples/: enhanced_agent_example.py  roundtrip_demo.py  simple_agent.py
tests/: __init__.py  test_enhanced_features.py  test_schemas.py
